WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
253497
Debug webgl/2.0.y/conformance2/state/gl-object-get-calls.html is slow because synthetic errors construct many strings
https://bugs.webkit.org/show_bug.cgi?id=253497
Summary
Debug webgl/2.0.y/conformance2/state/gl-object-get-calls.html is slow because...
Kimmo Kinnunen
Reported
2023-03-07 02:06:40 PST
Debug webgl/2.0.y/conformance2/state/gl-object-get-calls.html is slow because synthetic errors construct many strings
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-03-07 02:07:27 PST
<
rdar://problem/106352552
>
Radar WebKit Bug Importer
Comment 2
2023-03-07 02:07:57 PST
<
rdar://problem/106352564
>
Kimmo Kinnunen
Comment 3
2023-03-07 02:13:32 PST
Pull request:
https://github.com/WebKit/WebKit/pull/11167
EWS
Comment 4
2023-03-07 22:35:21 PST
Committed
261362@main
(5bafe4c47632): <
https://commits.webkit.org/261362@main
> Reviewed commits have been landed. Closing PR #11167 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug